codex-rs/tui/src/snapshots/codex_tui__requirement_view__tests__requirement_overlay_empty_state.snap
---
source: tui/src/requirement_view.rs
expression: terminal.backend()
---
"/ R E Q U I R E M E N T / / / / / / / / / / / / / / / / / / / / / / / / / / / / "
"Objective                                                                       "
"No requirement objective set                                                    "
"                                                                                "
"Status                                                                          "
"not started                                                                     "
"                                                                                "
"Summary                                                                         "
"No outcome summary available yet                                                "
"                                                                                "
"Decisions                                                                       "
"No decisions recorded yet                                                       "
"~                                                                               "
"~                                                                               "
"~                                                                               "
"~                                                                               "
"───────────────────────────────────────────────────────────────────────── 100% ─"
" ↑/↓ to scroll   pgup/pgdn to page   home/end to jump                           "
" q to quit                                                                      "
"                                                                                "
